K8sTraining/AdvancedTopics/external_name-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: externalname-svc
spec:
  type: ExternalName
  externalName: google.com
---
