K8sTraining/AdvancedTopics/nginx-service-headless.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginxweb
  template:
    metadata:
      name: nginxweb-pod
      labels:
        app: nginxweb
    spec:
      containers:
      - name: nginx-container
        image: nginx:1.21
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginxweb-headless-svc
spec:
  #명시적으로 clusterIP를 None으로 지정하는 것이 headless service
  clusterIP: None
  selector:
    app: nginxweb
  ports:
  - protocol: TCP
    port: 8880
    targetPort: 80
  type: ClusterIP
---
