K8sTraining/AdvancedTopics/ingress-nginx-controller-rule.yaml
---
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-shop
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingress-nginx-controller와 연결고리
  ingressClassName: nginx
  # ingress-nginx-controller와 연결고리
  # ingress-nginx-controller의 공인 IP로 들어오면 URL Redirect에 의해 아래 내부 K8s svc로 Redirector해 줌
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: svc-shop-main
            port: 
              number: 80
      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: svc-shop-payments
            port: 
              number: 80
---
